Added info text to some more modes buttons

--- a/projects/platonic-solids.html
+++ b/projects/platonic-solids.html
@@ -76,10 +76,11 @@
         <div class="w3-container w3-padding-32 ">
             <h3 class="w3-padding-16 w3-border-bottom w3-border-light-grey ">More modes</h3>
         </div>
-        <div class="w3-row-padding more-modes-container">
+        <div class="w3-row-padding">
             <div class="w3-col l3 m6 w3-margin-bottom w3-margin-top">
-                <a href="./src/platonic-solids-application.html" target="_">
-                    <div class=" w3-display-container" style="background: url('img/Platonic-Solids/blur.jpg') center;">
+                <a href="./src/platonic-solids-application.html" target="_" style="text-decoration: none;">
+                    <div class="more-modes w3-display-container"
+                        style="background: url('img/Platonic-Solids/blur.jpg') center;">
                         <div class="w3-padding" style="width:100%">
                             <img src="img/icons/fullscreen-icon.png" alt="fullscreen" style="width: 64px;" />
                             <br />Fullscreen
@@ -89,8 +90,8 @@
             </div>
 
             <div class="w3-col l3 m6 w3-margin-bottom w3-margin-top">
-                <a href="./src/platonic-solids-application-AR.html" target="_">
-                    <div class=" w3-display-container"
+                <a href="./src/platonic-solids-application-AR.html" target="_" style="text-decoration: none;">
+                    <div class="more-modes w3-display-container"
                         style="background: url('img/Platonic-Solids/blur-AR.jpg') center;">
                         <div class="w3-padding" style="width:100%">
                             <img src="img/icons/ar-icon.png" alt="Augmented Reality" style="width: 64px;" />
@@ -98,6 +99,13 @@
                         </div>
                     </div>
                 </a>
+
+                <p class="more-modes-text">
+                    <img src="img/icons/alert.png" alt="alert" style="height: 32px;">
+                    You must print a fiducial marker to use Augmented Reality mode (<a href="data/markers/hiro.png"
+                        target="_blank">click here</a> to
+                    download).
+                </p>
             </div>
 
         </div>
