--- a/projects/solar-system.html
+++ b/projects/solar-system.html
@@ -77,10 +77,11 @@
             <h3 class="w3-padding-16 w3-border-bottom w3-border-light-grey ">More modes</h3>
         </div>
 
-        <div class="w3-row-padding more-modes-container">
+        <div class="w3-row-padding">
             <div class="w3-col l3 m6 w3-margin-bottom w3-margin-top">
-                <a href="./src/solar-system-application.html?quality=0" target="_">
-                    <div class=" w3-display-container" style="background: url('img/Solar-System/blur.jpg') center;">
+                <a href="./src/solar-system-application.html?quality=0" target="_blank" style="text-decoration: none;">
+                    <div class="more-modes w3-display-container"
+                        style="background: url('img/Solar-System/blur.jpg') center;">
                         <div class="w3-padding" style="width:100%">
                             <img src="img/icons/fullscreen-icon.png" alt="fullscreen" style="width: 64px;" />
                             <br />Fullscreen - Medium Quality
@@ -90,36 +91,57 @@
             </div>
 
             <div class="w3-col l3 m6 w3-margin-bottom w3-margin-top">
-                <a href="./src/solar-system-application.html?quality=1" target="_">
-                    <div class=" w3-display-container" style="background: url('img/Solar-System/blur.jpg') center;">
+                <a href="./src/solar-system-application.html?quality=1" target="_blank" style="text-decoration: none;">
+                    <div class="more-modes w3-display-container"
+                        style="background: url('img/Solar-System/blur.jpg') center;">
                         <div class="w3-padding" style="width:100%">
                             <img src="img/icons/fullscreen-icon.png" alt="fullscreen" style="width: 64px;" />
                             <br />Fullscreen - High Quality
                         </div>
                     </div>
                 </a>
+
+                <p class="more-modes-text">
+                    <img src="img/icons/alert.png" alt="alert" style="height: 32px;">
+                    In high quality, the download time can be considerably longer.
+                </p>
             </div>
 
             <div class="w3-col l3 m6 w3-margin-bottom w3-margin-top">
-                <a href="./src/solar-system-application-AR.html" target="_">
-                    <div class=" w3-display-container" style="background: url('img/Solar-System/blur-AR.jpg') center;">
+                <a href="./src/solar-system-application-AR.html" target="_blank" style="text-decoration: none;">
+                    <div class="more-modes w3-display-container"
+                        style="background: url('img/Solar-System/blur-AR.jpg') center;">
                         <div class="w3-padding" style="width:100%">
                             <img src="img/icons/ar-icon.png" alt="Augmented Reality" style="width: 64px;" />
                             <br />Augmented Reality
                         </div>
                     </div>
                 </a>
+
+                <p class="more-modes-text">
+                    <img src="img/icons/alert.png" alt="alert" style="height: 32px;">
+                    You must print a fiducial marker to use Augmented Reality mode (<a href="data/markers/hiro.png"
+                        target="_blank">click here</a> to
+                    download).
+                </p>
             </div>
 
             <div class="w3-col l3 m6 w3-margin-bottom w3-margin-top">
-                <a href="./src/solar-system-application-VR.html" target="_">
-                    <div class=" w3-display-container" style="background: url('img/Solar-System/blur-VR.jpg') center;">
+                <a href="./src/solar-system-application-VR.html" target="_blank" style="text-decoration: none;">
+                    <div class="more-modes w3-display-container"
+                        style="background: url('img/Solar-System/blur-VR.jpg') center;">
                         <div class="w3-padding" style="width:100%">
                             <img src="img/icons/vr-icon.png" alt="Augmented Reality" style="width: 64px;" />
                             <br />Virtual Reality
                         </div>
                     </div>
                 </a>
+
+                <p class="more-modes-text">
+                    <img src="img/icons/alert.png" alt="alert" style="height: 32px;">
+                    Click in the "VR" button to enter in fullscreen VR mode in your mobile device (gyroscope sensor
+                    required).
+                </p>
             </div>
 
         </div>
