--- a/projects/architecture.html
+++ b/projects/architecture.html
@@ -66,11 +66,13 @@
         <div class="w3-container w3-padding-32 ">
             <h3 class="w3-padding-16 w3-border-bottom w3-border-light-grey ">More modes</h3>
         </div>
-        <div class=" w3-row-padding more-modes-container">
+        <div class="w3-row-padding">
 
             <div class="w3-col l3 m6 w3-margin-bottom w3-margin-top">
-                <a href="./src/architecture-application.html" target="_">
-                    <div class=" w3-display-container" style="background: url('img/Architecture/blur.jpg') center;">
+
+                <a href="./src/architecture-application.html" target="_" style="text-decoration: none;">
+                    <div class="more-modes w3-display-container"
+                        style="background: url('img/Architecture/blur.jpg') center;">
                         <div class="w3-padding" style="width:100%">
                             <img src="img/icons/fullscreen-icon.png" alt="fullscreen" style="width: 64px;" />
                             <br />Fullscreen
@@ -80,14 +82,22 @@
             </div>
 
             <div class="w3-col l3 m6 w3-margin-bottom w3-margin-top">
-                <a href="./src/architecture-AR.html" target="_">
-                    <div class=" w3-display-container" style="background: url('img/Architecture/blur-AR.jpg') center;">
+                <a href="./src/architecture-AR.html" target="_" style="text-decoration: none;">
+                    <div class="more-modes w3-display-container"
+                        style="background: url('img/Architecture/blur-AR.jpg') center;">
                         <div class="w3-padding" style="width:100%">
                             <img src="img/icons/ar-icon.png" alt="Augmented Reality" style="width: 64px;" />
                             <br />Augmented Reality
                         </div>
                     </div>
                 </a>
+
+                <p class="more-modes-text">
+                    <img src="img/icons/alert.png" alt="alert" style="height: 32px;">
+                    You must print a fiducial marker to use Augmented Reality mode (<a href="data/markers/hiro.png"
+                        target="_blank">click here</a> to
+                    download).
+                </p>
             </div>
 
         </div>
