Architecture VR added

--- a/projects/architecture.html
+++ b/projects/architecture.html
@@ -100,6 +100,34 @@
                 </p>
             </div>
 
+            <div class="w3-col l3 m6 w3-margin-bottom w3-margin-top">
+                <a href="./src/architecture-application-VR.html" target="_" style="text-decoration: none;">
+                    <div class="more-modes w3-display-container"
+                        style="background: url('img/Architecture/blur-VR.jpg') center;">
+                        <div class="w3-padding" style="width:100%">
+                            <img src="img/icons/vr-icon.png" alt="Augmented Reality" style="width: 64px;" />
+                            <br />Augmented Reality
+                        </div>
+                    </div>
+                </a>
+
+                <p class="more-modes-text">
+                    <img src="img/icons/alert.png" alt="alert" style="height: 32px;">
+                    It is required one HMD (head-mounted display) and one joystick in order to fully experiece the VR
+                    mode, though it is possible to use the app without those equipments.
+                </p>
+                <p class="more-modes-text">
+                    Using mobile devices, press the VR button in bottom right conner before inserting your device in the
+                    HMD. The joystick's axes control the teleport mark position and the first joystick button pressed
+                    will bet set to teleport you to the mark every time you press it again.
+                </p>
+                <p class="more-modes-text">
+                    Alternatively, it is possible to control the camera with keyboard (WASD or directional arrows) +
+                    mouse, or you may touch the screen to move if your your device's screen is sensitive to touch.
+                </p>
+
+            </div>
+
         </div>
         <!-- End of more modes -->
 
