Replacing lorem ipsum by real text

--- a/projects/architecture.html
+++ b/projects/architecture.html
@@ -34,9 +34,19 @@
 
         <div class="w3-container" id="about" style="text-align:justify;">
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi adipisci nulla cupiditate maxime
-                voluptatem natus necessitatibus ullam, illum, veritatis eaque nisi temporibus, repellendus animi
-                repellat quibusdam provident dolores. Quod, ullam.
+                When architects present their ideas for the customers, they usually present their architectural plans
+                and sketches to the customers. However, the customers may not actually understand the plans, as often
+                they are laypeople, and
+                the sketches are limited in how well they can represent a real house. It would be easier for common
+                people to understand all of those plans and sketches if there were also a 3D representation of the
+                building where they could walk through, mostly if it was in Virtual Reality.
+            </p>
+
+            <p>
+                Architects often have 3D modeling skills already, but the various software they use to build their
+                models usually do not have support for ease navigation nor augmented and virtual reality (AR and VR).
+                This apps aims to solve that problem, supplying the 3D navigation and the AR and VR support for the
+                already created 3D model.
             </p>
 
         </div>
