--- a/projects/architecture.html
+++ b/projects/architecture.html
@@ -116,7 +116,7 @@
                         style="background: url('img/Architecture/blur-VR.jpg') center;">
                         <div class="w3-padding" style="width:100%">
                             <img src="img/icons/vr-icon.png" alt="Augmented Reality" style="width: 64px;" />
-                            <br />Augmented Reality
+                            <br />Virtual Reality
                         </div>
                     </div>
                 </a>
@@ -142,15 +142,16 @@
         <!-- End of more modes -->
 
         <div class="w3-container w3-padding-32 ">
-            <h3 class="w3-padding-16 w3-border-bottom w3-border-light-grey ">Images in Augmented Reality</h1>
+            <h3 class="w3-padding-16 w3-border-bottom w3-border-light-grey ">
+                Images in Augmented and Virtual Reality
+            </h3>
         </div>
 
         <div class="w3-content w3-display-container w3-center w3-row ">
 
             <img class="slide " src="./img/Architecture/screenshot1-AR.jpg" onclick="openModal(1)">
             <img class="slide " src="./img/Architecture/screenshot2-AR.jpg" onclick="openModal(2)">
-            <!-- <img class="slide " src="./img/Architecture/screenshot3-AR.jpg " onclick="openModal(3)">
-            <img class="slide " src="./img/Architecture/screenshot4-AR.jpg" onclick="openModal(4)"> -->
+            <img class="slide " src="./img/Architecture/example-VR.jpg" onclick="openModal(3)">
 
             <button id="btn-left " class="w3-button w3-black w3-display-left w3-hide-large "
                 onclick="plusDivs(-1) ">&#10094;</button>
@@ -163,8 +164,8 @@
                     style="height: 100%;">
                 <img class="slide-modal w3-display-middle" src="./img/Architecture/screenshot2-AR.jpg"
                     style="height: 100%;">
-                <!-- <img class="slide-modal w3-display-middle" src="./img/Architecture/screenshot3-AR.jpg" style="height: 100%;">
-                <img class="slide-modal w3-display-middle" src="./img/Architecture/screenshot4-AR.jpg" style="height: 100%;"> -->
+                <img class="slide-modal w3-display-middle" src="./img/Architecture/example-VR.jpg"
+                    style="height: 100%;">
 
                 <span class="w3-black w3-text-white w3-opacity w3-display-left w3-btn" onclick="plusModal(-1)">❮</span>
                 <span class="w3-black w3-text-white w3-opacity w3-display-right w3-btn" onclick="plusModal(1)">❯</span>
