new teleporter component

--- a/projects/architecture.html
+++ b/projects/architecture.html
@@ -123,17 +123,15 @@
 
                 <p class="more-modes-text">
                     <img src="img/icons/alert.png" alt="alert" style="height: 32px;">
-                    It is required one HMD (head-mounted display) and one joystick in order to fully experiece the VR
-                    mode, though it is possible to use the app without those equipments.
+                    In order to fully experiece the VR mode, it is required one HMD (head-mounted display) and one
+                    joystick even
+                    though it is possible to use the app without those equipments.
                 </p>
                 <p class="more-modes-text">
                     Using mobile devices, press the VR button in bottom right conner before inserting your device in the
-                    HMD. The joystick's axes control the teleport mark position and the first joystick button pressed
-                    will bet set to teleport you to the mark every time you press it again.
-                </p>
-                <p class="more-modes-text">
-                    Alternatively, it is possible to control the camera with keyboard (WASD or directional arrows) +
-                    mouse, or you may touch the screen to move if your your device's screen is sensitive to touch.
+                    HMD. A circle will move as you look around and you can teleport to that circle pressing any joystick
+                    button. Alternatively, it is also possible to teleport pressisng the spacebar or touching the screen
+                    if your device is sensitive to touch.
                 </p>
 
             </div>
