--- a/projects/src/architecture-application-VR.html
+++ b/projects/src/architecture-application-VR.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>House VR</title>
+    <title>Architecture VR</title>
     <link rel="stylesheet" href="../../css/w3.css">
 
     <style>
@@ -18,22 +18,6 @@
             width: 100%;
             height: 100%;
         }
-
-        #blocker {
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(7, 7, 9, 0.5);
-            display: none;
-            z-index: 1000;
-        }
-
-        #instructions {
-            color: #ffffff;
-            font-size: 1.8em;
-            width: 70%;
-            z-index: 1001;
-        }
     </style>
 
     <!-- Library of Virtual Reality -->
@@ -44,7 +28,7 @@
     -->
 
     <script>
-        let stairs, floor = [], isFlying = false;
+        const floor = [];
 
         AFRAME.registerComponent('modify-materials', {
             init: function () {
@@ -63,8 +47,6 @@
                         } else if (/water/i.test(element.name)) {
                             element.material.transparency = true;
                             element.material.opacity = 0.7;
-                        } else if (/stairs/i.test(element.name)) {
-                            stairs = element;
                         } else if (/ground|stairs|floor/i.test(element.name)) {
                             floor.push(element);
                         }
@@ -76,168 +58,111 @@
             }
         });
 
-        AFRAME.registerComponent('camera-collision', {
-            init: function () {
-                this.height = this.el.getAttribute('position').y
-                this.parentPos = this.el.parentEl.object3D.position
-
-                this.raycaster = new THREE.Raycaster(new THREE.Vector3(), new THREE.Vector3(0, -1, 0).normalize(), 0, this.height + 0.5);
-                this.pos = new THREE.Vector3(this.parentPos.x, this.height, this.parentPos.z);
-            },
-            tick: function (time, delta) {
-                if (stairs) {
-                    this.parentPos = this.el.parentEl.object3D.position
-                    this.pos.x = this.parentPos.x;
-                    this.pos.y = this.parentPos.y + this.height;
-                    this.pos.z = this.parentPos.z;
-                    this.raycaster.ray.origin.copy(this.pos);
-
-                    let intersectStairs = this.raycaster.intersectObject(stairs)[0];
-                    if (intersectStairs) {
-                        if (intersectStairs.distance <= this.height) {
-                            this.parentPos.y += (this.height - intersectStairs.distance - 0.1);
-                        }
-                        else {
-                            this.parentPos.y -= (intersectStairs.distance - this.height + 0.1);
-                        }
-                    }
-                    else {
-                        let intersectFloor = this.raycaster.intersectObjects(floor)[0]
-                        if (intersectFloor) {
-                            if (intersectFloor.distance < this.height) {
-                                this.parentPos.y += (this.height - intersectFloor.distance);
-                                isFlying = false;
-                            }
-                        }
-                        else if (!isFlying) {
-                            if (this.parentPos.y >= -0.6) {
-                                this.parentPos.y -= 0.005 * delta
-                            }
-                        }
-                    }
-                }
-            }
-        });
-
         AFRAME.registerComponent('teleport', {
             init: function () {
-                this.gamepad = {};
-                this.isGamepad = false;
-                this.teleportButton = -1; // mobile index
-                this.velocity = 0.005
-                this.rotation = 0;
-                this.height = 0.2;
-                this.raycaster = new THREE.Raycaster(new THREE.Vector3(), new THREE.Vector3(0, -1, 0).normalize(), 0, 1);
-                this.rayPos = new THREE.Vector3(0, 1, 0);
+                this.gamepad = null;
+                this.obj = this.el.object3D;
+                this.objPos = new THREE.Vector3();
+                this.camera = document.querySelector('#camera');
+                this.canTeleport = true;
+                this.raycaster = new THREE.Raycaster();
+                this.direction = new THREE.Vector3();
+                this.intersection;
 
-                let self = this;
+                let self = this
                 window.addEventListener("gamepadconnected", function (e) {
                     console.log("Gamepad connected at index %d: %s. %d buttons, %d axes.",
                         e.gamepad.index, e.gamepad.id,
                         e.gamepad.buttons.length, e.gamepad.axes.length);
 
-                    document.querySelector('#blocker').style.display = 'block';
-                    setTimeout(() => { self.isGamepad = true }, 500);
+                    self.canTeleport = true;
                 });
 
-                let teleportTexture = new THREE.TextureLoader().load('./assets/textures/teleport.png');
+                window.addEventListener("keydown", (e) => {
+                    if (e.keyCode == 32) this.teleport();
+                });
+
+                window.addEventListener('touchstart', (e) => {
+                    this.teleport();
+                })
+
+                let material = new THREE.MeshBasicMaterial({
+                    color: 0x7744AA,
+                    side: THREE.DoubleSide,
+                });
+
                 this.teleportMark = new THREE.Mesh(
-                    new THREE.CircleGeometry(1, 20),
-                    new THREE.MeshBasicMaterial({
-                        map: teleportTexture,
-                        side: THREE.DoubleSide,
-                    })
+                    new THREE.CylinderGeometry(0.5, 0.5, 0.2, 20, 1, true),
+                    material
                 );
 
-                this.teleportMark.rotation.x = Math.PI * -0.5;
-                this.teleportMark.scale.set(0.5, 0.5, 1)
-
-                this.teleportMark.position.set(-3, 0.2, 16);
+                this.teleportMark.position.set(-3, 0, 15);
+                this.obj.position.set(-3, 0, 18);
 
                 this.el.parentEl.setObject3D('telep', this.teleportMark);
+
+                this.objPos.copy(this.obj.position);
+                this.objPos.y += 1.4;
+
+                let tubeGeometry = new THREE.TubeBufferGeometry(new THREE.LineCurve3(this.objPos, this.teleportMark.position), 1, 0.01, 5, false);
+                this.tube = new THREE.Mesh(tubeGeometry, material);
+
+                this.el.sceneEl.setObject3D('tube', this.tube)
             },
             tick: function (time, delta) {
-                if (!this.isGamepad) return
-
                 this.gamepad = navigator.getGamepads()[0];
 
-                if (this.teleportButton === -1) {
-                    for (let i = 0; i < this.gamepad.buttons.length; i++) {
-                        console.log(this.gamepad.buttons[i].pressed);
-                        if (this.gamepad.buttons[i].pressed) {
-                            this.teleportButton = i;
-                            document.querySelector('#blocker').style.display = 'none';
-                            break;
-                        }
-                    }
-                    return
+                camera.object3D.getWorldDirection(this.direction);
+                this.direction.multiplyScalar(-1);
+                if (this.direction.y > -0.2) {
+                    this.direction.y = -0.2;
                 }
 
-                this.rotation = this.el.children[0].object3D.rotation.y
+                this.objPos.copy(this.obj.position);
+                this.objPos.y += 1.4;
 
-                if (this.gamepad.axes[0] !== 0) {
-                    this.teleportMark.position.x += this.velocity * delta * this.gamepad.axes[0] * Math.cos(this.rotation);
-                    this.teleportMark.position.z += this.velocity * delta * this.gamepad.axes[0] * - Math.sin(this.rotation);
-                }
-                if (this.gamepad.axes[1] !== 0) {
-                    this.teleportMark.position.z += this.velocity * delta * this.gamepad.axes[1] * Math.cos(this.rotation);
-                    this.teleportMark.position.x += this.velocity * delta * this.gamepad.axes[1] * Math.sin(this.rotation);
+                this.raycaster.far = 9
+                this.raycaster.set(this.objPos, this.direction);
+                this.intersection = this.raycaster.intersectObjects(floor);
+
+                if (this.intersection[0] && this.intersection[0].face.normal.x == 0 && this.intersection[0].face.normal.z == 0) {
+                    this.teleportMark.position.copy(this.intersection[0].point);
+                    this.teleportMark.position.y += 0.15;
                 }
 
-                if (this.gamepad.buttons[this.teleportButton].pressed) {
-                    this.el.object3D.position.x = this.teleportMark.position.x;
-                    this.el.object3D.position.y = this.teleportMark.position.y - this.height;
-                    this.el.object3D.position.z = this.teleportMark.position.z;
+                this.tube.geometry = new THREE.TubeBufferGeometry(new THREE.LineCurve3(this.objPos, this.teleportMark.position), 1, 0.01, 5, false);
+                this.tube.geometry.needsupdate = true;
+
+                if (!this.gamepad) return;
+
+                if (this.gamepad.buttons.some(btn => btn.pressed)) {
+                    this.teleport();
+                }
+
+            },
+            teleport: function () {
+                if (this.canTeleport) {
+                    this.obj.position.x = this.teleportMark.position.x;
+                    this.obj.position.y = this.teleportMark.position.y;
+                    this.obj.position.z = this.teleportMark.position.z;
+                    this.canTeleport = false;
+                    setTimeout(() => { this.canTeleport = true }, 500);
                     console.log('teleported')
                 }
-
-                // collision
-                if (stairs) { // if stairs object isn't null, the scene has loaded the collidable objects
-                    this.rayPos.x = this.teleportMark.position.x;
-                    this.rayPos.y = 1 + this.teleportMark.position.y;
-                    this.rayPos.z = this.teleportMark.position.z;
-
-                    this.raycaster.ray.origin.copy(this.teleportMark.position);
-
-                    let intersectStairs = this.raycaster.intersectObject(stairs)[0];
-                    if (intersectStairs) {
-                        this.teleportMark.position.y += (this.height - intersectStairs.distance);
-                    }
-                    else {
-                        let intersectFloor = this.raycaster.intersectObjects(floor)[0]
-                        if (intersectFloor) {
-                            this.teleportMark.position.y += (this.height - intersectFloor.distance)
-                        }
-                        else if (this.teleportMark.position.y >= -0.6) {
-                            this.teleportMark.position.y -= this.velocity * 0.5 * delta
-                        }
-                        else {
-                            this.teleportMark.position.y = 0.2;
-                        }
-                    }
-                }
-
             }
         });
     </script>
 </head>
 
 <body>
-    <div id="blocker" class="w3-display-container">
-        <div id="instructions" class="w3-display-middle w3-center w3-white w3-opacity">
-            <h1>Setting Controllers</h1>
-            <p>Press one button to set it as the teleport button</p>
-        </div>
-    </div>
-
     <a-scene main_scene id="scene" time light="defaultLightsEnabled: false" renderer="antialias: true; alpha: true">
         <a-assets timeout="60000">
             <a-asset-item id="house" src="./assets/models/modern-house.glb"></a-asset-item>
             <img id="skyBoxMap" src="./assets/textures/cloud.jpg">
         </a-assets>
 
-        <a-entity id="rig" position="-3 0 18" movement-controls="controls: keyboard, touch" teleport>
-            <a-entity id="camera" camera position="0 1.5 0" look-controls="pointerLockEnabled: true" camera-collision>
+        <a-entity id="rig" position="-3 0 18" teleport>
+            <a-entity id="camera" camera position="0 1.5 0" look-controls="pointerLockEnabled: true">
             </a-entity>
         </a-entity>
 
