added projectile motion project

--- a/index.html
+++ b/index.html
@@ -113,6 +113,15 @@
                     </div>
                 </a>
             </div>
+            <div class="w3-col l3 m6 w3-margin-bottom">
+                <a href="projects/projectile-motion.html">
+                    <div class="w3-display-container" style="border:2px solid black">
+                        <div class="project-title w3-display-topleft w3-padding">Projectile Motion</div>
+                        <img src="img/projectile-motion/projectile-motion.jpg" alt="aiplane droping crate"
+                            style="width:100%;">
+                    </div>
+                </a>
+            </div>
         </div>
 
         <!-- About Section -->
