Inclined Plane - Fullscreen option

--- a/index.html
+++ b/index.html
@@ -122,6 +122,16 @@
                     </div>
                 </a>
             </div>
+
+            <div class="w3-col l3 m6 w3-margin-bottom">
+                <a href="projects/inclined-plane.html">
+                    <div class="w3-display-container" style="border:2px solid black">
+                        <div class="project-title w3-display-topleft w3-padding">inclined plane</div>
+                        <img src="img/inclined-plane/inclined-plane.png" alt="aiplane droping crate"
+                            style="width:100%;">
+                    </div>
+                </a>
+            </div>
         </div>
 
         <!-- About Section -->
